--- a/Landing Page HTML/css/estilos.css
+++ b/Landing Page HTML/css/estilos.css
@@ -108,6 +108,9 @@ body{
     width: 100%;
     align-items: center;
     justify-content: right;
+    font-weight: 500;  
+    font-style: italic;
+    text-shadow: 2px 8px 3px rgb(61, 57, 57)
 }
 
 .parrafo{
