--- a/Landing Page HTML/css/estilos.css
+++ b/Landing Page HTML/css/estilos.css
@@ -187,6 +187,7 @@ body{
     justify-content: right;
     margin-right: 10px;
     margin-bottom: 10px;
+    margin-top: -430px;
 }
 
 /* galeria */
